Refactor PessoaConverter and PessoaService for clarity and efficiency
- Added a private constructor to PessoaConverter to prevent instantiation.
- Simplified instanceof checks in PessoaConverter and PessoaService using pattern matching for instanceof.
- Corrected method parameter name in PessoaJuridicaRepository.
- Removed unnecessary import in ApiExceptionHandler and simplified stream processing.